--- a/Policy_QA_RAG.ipynb
+++ b/Policy_QA_RAG.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyNzvLKTImJCI+sHTvuFE+8J",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -7887,6 +7889,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mandyvincentzong/Policy-QA-RAG/blob/main/Policy_QA_RAG.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -7910,7 +7922,7 @@
         },
         "outputId": "4eada4f2-9d81-4ad6-aede-c976f5018188"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8001,7 +8013,7 @@
         "id": "JYsQ8YZ9-HmV",
         "outputId": "cd895a2b-6313-457e-fdf6-4e0dbba5a90c"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8149,7 +8161,7 @@
         "id": "NnFRf2kIB2HD",
         "outputId": "4cb503c2-bc64-4af3-836d-2a7814ef081b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8183,7 +8195,7 @@
         "id": "Yf9sNpOH-kpr",
         "outputId": "2ae00863-7271-4dd4-e34e-8acfdb871eb4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8358,7 +8370,7 @@
         "id": "JluuH__6_dCD",
         "outputId": "f49abb41-0a2b-4114-9e26-5ae727f0f257"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8534,7 +8546,7 @@
         },
         "outputId": "314dee39-9cdd-47c2-f5dd-8077930fca69"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8719,7 +8731,7 @@
       "metadata": {
         "id": "dKar-XhhAkVV"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9004,7 +9016,7 @@
         "id": "oTRY-UOuIc6q",
         "outputId": "e1958338-985c-4025-8365-ad1677ae9c73"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9355,7 +9367,7 @@
         "id": "3KcE9fLVA7lS",
         "outputId": "8ff32f61-15a7-40c6-cf30-2bfe1e5d094c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9380,7 +9392,7 @@
         "id": "I_-VppJSHRaA",
         "outputId": "bb40693b-9dd8-4777-dbdb-05e5dcf71e98"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
