--- a/Policy_QA_RAG.ipynb
+++ b/Policy_QA_RAG.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyNzvLKTImJCI+sHTvuFE+8J",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -7889,16 +7887,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mandyvincentzong/Policy-QA-RAG/blob/main/Policy_QA_RAG.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -8737,7 +8725,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 💬 Step 5: Assemble Context and Query the LLM"
+        "# 💬 Step 5: Assemble Context and Query the LLM (openAI version)"
       ],
       "metadata": {
         "id": "2F24sRuwAqWX"
@@ -8828,8 +8816,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# (When openAI API hits up limit) Use a free open-source LLM instead (no API key needed)\n",
-        "\n",
+        "# 💬 Step 5: Assemble Context and Query the LLM (hugging face version)\n",
         "# You can swap the OpenAI call with a local or Hugging Face model (e.g., mistral, llama, flan-t5) that runs directly in Colab."
       ],
       "metadata": {
